--- a/src/app/admin/appointments/appointments/appointments.component.html
+++ b/src/app/admin/appointments/appointments/appointments.component.html
@@ -1,26 +1,41 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="row">
+        <div *ngIf="adminUser" class="row">
             <div class="col-sm-12 col-md-12 order-lg-12 col-lg-3">
                 <div class="card">
                     <div class="card-header card-header-danger">
                         <h4 class="card-title">Opciones</h4>
                     </div>
                     <div class="card-body">
-                        <!-- <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Agregar
-                            nuevo</a> -->
+                        <a *ngIf="adminUser" [routerLink]="['/admin', 'edicion-cita', 'D-s']" class="btn btn-warning btn-block">Agregar
+                            nuevo</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12  col-lg-9">
+            <div  class="col-sm-12 col-md-12  col-lg-9">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Citas</h4>
+                        <h4 class="card-title">Citas de Empresa</h4>
                         <p class="card-category">Listado de citas</p>
                     </div>
                     <div class="card-body">
-                        <div *ngIf="Data">
-                            <app-table-list [Data]="Data"></app-table-list>
+                        <div *ngIf="DataCompany">
+                            <app-table-list [Data]="DataCompany"></app-table-list>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-12  col-lg-9">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Citas de Usuario</h4>
+                        <p class="card-category">Listado de citas</p>
+                    </div>
+                    <div class="card-body">
+                        <div *ngIf="DataUser">
+                            <app-table-list [Data]="DataUser"></app-table-list>
                         </div>
                     </div>
                 </div>
