--- a/src/app/admin/privateConsultations/private-consultations/private-consultations.component.html
+++ b/src/app/admin/privateConsultations/private-consultations/private-consultations.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12 col-md-12 order-lg-12 col-lg-3">
+            <div *ngIf="itsCompany" class="col-sm-12 col-md-12 order-lg-12 col-lg-3">
                 <div class="card">
                     <div class="card-header card-header-danger">
                         <h4 class="card-title">Opciones</h4>
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div *ngIf="itsCompany" class="row">
             <div class="col-sm-12 col-md-12  col-lg-9">
                 <div class="card">
                     <div class="card-header card-header-danger">
