correciones en home

--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -1,3 +1,4 @@
+<div class="screen">
 <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" (click)="GoTo('/page')" style="padding: 0;margin: 0;margin-left: 20px;"><img style="width: 50px" src="/assets/img/logo-aa.png" alt="" ></a>
     <button (click)="toggleState()" style="border: none !important" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -5,8 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': isIn }" >
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" (click)="GoTo('/page')">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" (click)="GoTo('/page')">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="GoTo('/page/listado-empresas')">Empresas</a>
@@ -23,9 +24,39 @@
         <li class="nav-item">
           <a class="nav-link" (click)="GoTo('/page/listado-articulos')">Articulos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="GoTo('/session/singin')">Iniciar sessión</a>
+        </li>
       </ul>
     </div>
   </nav>
+
+  <div class="navbaraltermovil " [ngClass]="{ 'navbar-en': isIn }">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/page')">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/page/listado-empresas')">Empresas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/page/adopcion')">Mascotas en adopción</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/page/listado-alertas')">Alertas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/page/listado-consultas')">Consultas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/page/listado-articulos')">Articulos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="GoTo('/session/singin')">Iniciar sessión</a>
+      </li>
+    </ul>
+  </div>
+
 
 <router-outlet></router-outlet>
 
@@ -34,3 +65,4 @@
       <a > Asistencia Animal</a>
     </div>
   </footer>
+</div>
