--- a/src/app/layouts/landing-layout/landing-layout.component.scss
+++ b/src/app/layouts/landing-layout/landing-layout.component.scss
@@ -16,3 +16,21 @@ footer {
     background-color: #d6493E;
     color: #fff;
 }
+
+.nav-link {
+    cursor: pointer;
+}
+
+.navbaraltermovil {
+    background-color: #d6493E;
+    color: #fff;
+}
+
+.navbar-en {
+    display: none;
+}
+
+.screen {
+    height: 100vh;
+    display: grid;
+}
