--- a/src/app/landing/home/home.component.html
+++ b/src/app/landing/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="cover center">
         <div class="container">
             <h1>Asistencia Animal</h1>
-            <h2>Es una plataforma que ayuda a conectar a la población con mascotas que requieran de una asistencia inmediata, ademas de poder brindar mas servicios a las empresas y asociaciones a la gestión y comunicación con sus cliente</h2>
+            <h3>Es una plataforma que ayuda a conectar a la población con mascotas que requieran de una asistencia inmediata, ademas de poder brindar mas servicios a las empresas y asociaciones a la gestión y comunicación con sus cliente</h3>
         </div>
     </div>
 </div>
@@ -107,14 +107,14 @@
         </div>
     </div>
 </div>
-<div class="spot bck-col-1">
+<!-- <div class="spot bck-col-1">
     <div class="container">
         <div class="con center space-incontent">
             <div class="row">
                 <div class="col-sm-12">
                     <!-- <mat-form-field class="example-full-width">
                         <input matInput formControlName="Name" placeholder="Nombre">
-                    </mat-form-field> -->
+                    </mat-form-field> - ->
                     <form>
                         <input class="form-control" matInput  id="inputEmail" placeholder="Nombre" required>
                         <input class="form-control" matInput  id="inputEmail" placeholder="Nombre" required>
@@ -127,5 +127,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
