cambios en el diseño de AA

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="footer ">
     <div class="container-fluid">
-        <nav class="pull-left">
+        <!-- <nav class="pull-left">
             <ul>
                 <li>
                     <a href="https://www.creative-tim.com">
-                        Creative Tim
+                        Landing age
                     </a>
                 </li>
                 <li>
@@ -23,11 +23,11 @@
                     </a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
         <div class="copyright pull-right">
             &copy;
-            {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+            {{test | date: 'yyyy'}}, 
+            <a href="https://asistenciaanimal-61b17.web.app" target="_blank">Asistencia Animal</a>
         </div>
     </div>
 </footer>
