--- a/src/app/landing/Pet/pet-view/pet-view.component.html
+++ b/src/app/landing/Pet/pet-view/pet-view.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="company">
+<!-- <div *ngIf="company">
     <div class="container cont">
         <div class="row">
             <div class="col-sm-12 center">
@@ -27,4 +27,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
