--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
-    <div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/background.jpg">
         <app-sidebar></app-sidebar>
-        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+        <div class="sidebar-background" style="background-image: url(./assets/img/background.jpg)"></div>
     </div>
     <div class="main-panel">
         <app-navbar></app-navbar>
@@ -12,7 +12,7 @@
     </div>
 </div>
 <!-- Buy-Modal-angular -->
-<div class="modal modal-angular fade" id="buy" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<!-- <div class="modal modal-angular fade" id="buy" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 <div class="modal-dialog" role="document">
     <div class="modal-content">
         <div class="modal-body text-center">
@@ -81,4 +81,4 @@
     </div>
 </div>
 
-</div>
+</div> -->
