--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
+    <a  class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+            <img src="/assets/img/logo-aa.png"/>
         </div>
-        Creative Tim
+        Asist. Animal
     </a>
 </div>
 <div class="sidebar-wrapper">
   <div *ngIf="isMobileMenu()">
-    <form class="navbar-form">
+    <!-- <form class="navbar-form">
       <span class="bmd-form-group">
         <div class="input-group no-border">
           <input type="text" value="" class="form-control" placeholder="Search...">
@@ -52,7 +52,7 @@
                 </p>
             </a>
         </li>
-    </ul>
+    </ul> -->
   </div>
     <ul class="nav">
         <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
