--- a/src/app/admin/pets/pets/pets.component.html
+++ b/src/app/admin/pets/pets/pets.component.html
@@ -15,7 +15,7 @@
             <div class="col-sm-12 col-md-12  col-lg-9">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Masotas</h4>
+                        <h4 class="card-title">Mascotas</h4>
                         <p class="card-category">Listado de mascotas</p>
                     </div>
                     <div class="card-body">
