--- a/src/app/form/company-form/company-form.component.html
+++ b/src/app/form/company-form/company-form.component.html
@@ -25,10 +25,10 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="form-label-group">
                         <mat-form-field *ngIf="RoleEnum">
-                            <mat-label>Tipo de empresa</mat-label>
+                            <mat-label>Tipo de empresa:</mat-label>
                             <mat-select formControlName="AsociationType">
                                 <mat-option *ngFor="let item of RoleEnum" [value]="item">
-                                    {{ item }}
+                                    {{ item.Name }}
                                 </mat-option>
                             </mat-select>
                         </mat-form-field>
