--- a/src/app/landing/home/home.component.html
+++ b/src/app/landing/home/home.component.html
@@ -2,7 +2,9 @@
     <div class="cover center">
         <div class="container">
             <h1>Asistencia Animal</h1>
-            <h3>Es una plataforma que ayuda a conectar a la población con mascotas que requieran de una asistencia inmediata, ademas de poder brindar mas servicios a las empresas y asociaciones a la gestión y comunicación con sus cliente</h3>
+            <h3>Es una plataforma que ayuda a conectar a la población con mascotas que requieran de una asistencia
+                inmediata, ademas de poder brindar mas servicios a las empresas y asociaciones a la gestión y
+                comunicación con sus cliente</h3>
         </div>
     </div>
 </div>
@@ -13,8 +15,11 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="center-v">
                         <h2>Adopción de mascotas</h2>
-                        <p>En esta plataforma podras realizar adopciones en linea, en tan pocos clicks, directo a la asociación encargada, con tan solo la espera de la respuesta de este pronto podras disfrutar de tu mascota</p>
-                        <button (click)="GoTo('/page/adopcion')" type="button" mat-raised-button class="btn btn-info">Adopta</button>
+                        <p>En esta plataforma podras realizar adopciones en linea, en tan pocos clicks, directo a la
+                            asociación encargada, con tan solo la espera de la respuesta de este pronto podras disfrutar
+                            de tu mascota</p>
+                        <button (click)="GoTo('/page/adopcion')" type="button" mat-raised-button
+                            class="btn btn-info">Adopta</button>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6">
@@ -43,7 +48,8 @@
                     <span class="material-icons green">
                         videocam
                     </span>
-                    <p>¿En caso de una emergencia el cual no puedas asistir al centro de salud? podras realizar video llamadas</p>
+                    <p>¿En caso de una emergencia el cual no puedas asistir al centro de salud? podras realizar video
+                        llamadas</p>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <h4>Historico de asistencia</h4>
@@ -66,7 +72,9 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="center-v">
                         <h2>Alertas</h2>
-                        <p>¿Se extravio tu mascota? publica una alerta de tu mascota, y todos estaran enterados para poder brindarte ayuda, O vez de alguna emergencia o quieres notificar un maltrato hacia los animales? aqui mismo podras anunciarlo</p>
+                        <p>¿Se extravio tu mascota? publica una alerta de tu mascota, y todos estaran enterados para
+                            poder brindarte ayuda, O vez de alguna emergencia o quieres notificar un maltrato hacia los
+                            animales? aqui mismo podras anunciarlo</p>
                     </div>
                 </div>
             </div>
@@ -80,14 +88,17 @@
                 <div class="col-sm-12 col-md-6">
                     <img class="image-sec-2" src="/assets/img/consultas.jpg" alt="">
                     <h4>Consultas</h4>
-                    <p>Revisa las consultas que realizan las demas personas o ayudalos con sus dudas y has crecer esta comunidad</p>
-                    <button (click)="GoTo('/page/listado-consultas')" type="button" mat-raised-button class="btn btn-info">Consultas</button>
+                    <p>Revisa las consultas que realizan las demas personas o ayudalos con sus dudas y has crecer esta
+                        comunidad</p>
+                    <button (click)="GoTo('/page/listado-consultas')" type="button" mat-raised-button
+                        class="btn btn-info">Consultas</button>
                 </div>
                 <div class="col-sm-12 col-md-6">
                     <img class="image-sec-2" src="/assets/img/articulos.jpg" alt="">
                     <h4>Articulos</h4>
                     <p>Revisa los articulos que las personas han publicado, puede existir alguno de tu interes</p>
-                    <button (click)="GoTo('/page/listado-articulos')" type="button" mat-raised-button class="btn btn-info">Articulos</button>
+                    <button (click)="GoTo('/page/listado-articulos')" type="button" mat-raised-button
+                        class="btn btn-info">Articulos</button>
                 </div>
             </div>
         </div>
@@ -100,32 +111,83 @@
                 <div class="col-sm-12">
                     <div class="center-v">
                         <h2>¡Que esperas para registrarte!</h2>
-                        <button (click)="GoTo('/session/singup')" type="button" mat-raised-button class="btn btn-info">REGISTRATE</button>
+                        <button (click)="GoTo('/session/singup')" type="button" mat-raised-button
+                            class="btn btn-info">REGISTRATE</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- <div class="spot bck-col-1">
+<div class="spot bck-col-1">
     <div class="container">
         <div class="con center space-incontent">
             <div class="row">
-                <div class="col-sm-12">
-                    <!-- <mat-form-field class="example-full-width">
-                        <input matInput formControlName="Name" placeholder="Nombre">
-                    </mat-form-field> - ->
-                    <form>
-                        <input class="form-control" matInput  id="inputEmail" placeholder="Nombre" required>
-                        <input class="form-control" matInput  id="inputEmail" placeholder="Nombre" required>
-                        <textarea  class="form-control" matInput placeholder="Descripción de empresa"
-                                rows="5"></textarea>
-                        
-                        <button type="button" mat-raised-button class="btn btn-info">CONTACTANOS</button>
-                    </form>
+                <div class="col-sm-12 col-md-12">
+                    <h2>Precios y detalles de paquetes</h2>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th><strong>Paquete 1</strong></th>
+                                <th><strong>Paquete 2</strong></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Realizar adopciones en línea con limitación en las publicaciones de mascotas</td>
+                                <td>Habilitación de consultas privadas, sin video llamada </td>
+                            </tr>
+                            <tr>
+                                <td>Sin límites de subida de mascotas en adopción</td>
+                                <td>Habilitación de consultas privadas con video llamada</td>
+                            </tr>
+                            <tr>
+                                <td>En la búsqueda de servicios será mostrado en las primeras opciones</td>
+                                <td>En la búsqueda de servicios será mostrado en las primeras opciones como empresa
+                                    premium</td>
+                            </tr>
+                            <tr>
+                                <td><strong>$6</strong></td>
+                                <td><strong>$10</strong></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-sm-12 col-md-12 center">
+                    <h2>Realiza tu compra</h2>
+
+                    <p>Al realizar tu pago, se te estará notificando su confirmación en un tiempo estimado de 24horas
+                    </p>
+                    <button (click)="paymentSelectionEvent()" type="button" mat-raised-button
+                            class="btn btn-info">CLICK AQUI PARA REALIZAR TU PAGO EN PAYPAL</button>
+                            <!-- formulario de confirmacion -->
+                            <div *ngIf="paymentSelection && !comfirmPayment">
+                                <h4>Ingresa los siguientes datos para contactarte</h4>
+                                <form [formGroup]="PayMentForm">
+                                    <input class="form-control" formControlName="Name" matInput  id="inputEmail" placeholder="Nombre" required>
+                                    <input class="form-control" formControlName="Email" matInput  id="inputEmail" placeholder="Correo" required>
+                                    <input class="form-control" formControlName="Phone" matInput  id="inputEmail" placeholder="Telefono" required>
+                                    <button type="button" (click)="comfirmPaymentEvnt()" mat-raised-button class="btn btn-info">Enviar y realizar pago</button>
+                                </form>
+                            </div>
+                            <div *ngIf="comfirmPayment">
+                                <form #form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                                    <input type="hidden" name="cmd" value="_s-xclick">
+                                    <input type="hidden" name="hosted_button_id" value="5Z5JMCM53UV54">
+                                    <table style="margin: auto;">
+                                    <tr><td><input type="hidden" name="on0" value="Paquetes">Paquetes</td></tr><tr><td><select name="os0">
+                                        <option value="Opción 1">Opción 1 $6.00 USD</option>
+                                        <option value="Opción 2">Opción 2 $10.00 USD</option>
+                                    </select> </td></tr>
+                                    <tr><td><input type="hidden" name="on1" value="Correo electrónico">Correo electrónico</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                                    </table>
+                                    <input type="hidden" name="currency_code" value="USD">
+                                    <input type="image" (click)="form.submit()" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                                </form>
+                            </div>
                 </div>
             </div>
         </div>
     </div>
-</div> -->
-
+</div>
