--- a/src/app/layouts/form-layout/form-layout.component.scss
+++ b/src/app/layouts/form-layout/form-layout.component.scss
@@ -1,6 +1,6 @@
 .background {
-    background: rgb(224,123,5);
-    background: linear-gradient(90deg, rgba(224,123,5,1) 0%, rgba(228,148,18,1) 35%, rgba(255,106,0,1) 100%);
+    background: #d6493E;
+    background: linear-gradient(90deg, #d6493E 0%, #F46F65 35%, #d6493E 100%);
     width: 100%;
     min-height: 100vh;
     position: absolute;
