--- a/src/app/layouts/login-layout/login-layout.component.scss
+++ b/src/app/layouts/login-layout/login-layout.component.scss
@@ -1,5 +1,5 @@
 .background {
-    background-image: linear-gradient(to right top, #e49917, #ebae08, #eec300, #efd900, #ecf000);
+    background-image: linear-gradient(to right top, #d6493E, #d6493E, #F46F65, #F46F95, #F46F65);
     width: 100%;
     min-height: 100vh;
 }
