--- a/src/app/landing/home/home.component.scss
+++ b/src/app/landing/home/home.component.scss
@@ -91,3 +91,15 @@ $orange : #F46F65;
 .sd {
     font-size: 16px;
 }
+
+.paymenyform {
+    input {
+        margin: 20px;
+    }
+}
+
+.backForm {
+    background-color: white;
+    padding: 25px;
+    border-radius: 25px;
+}
